feat: Create and complete a tobuy list
